--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "sportsarea",
+  "name": "arunika",
   "module": "index.ts",
-  "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "knex": "knex"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.5.4",
+    "typescript-register": "^1.1.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@babel/register": "^7.24.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-route-grouping": "^1.1.2"
+    "express-route-grouping": "^1.1.2",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
+    "ts-node": "^10.9.2",
+    "typescript-node": "^0.1.3"
   }
 }
