--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "bun --watch index.ts",
-    "knex": "knex"
+    "db": "bunx knex"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -18,6 +18,7 @@
     "@babel/register": "^7.24.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
