--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "bun --watch index.ts",
+    "dev": " bun --watch index.ts",
+    "dev:swagger": "bun swagger.ts && bun --watch index.ts",
     "db": "bunx knex"
   },
   "devDependencies": {
@@ -20,12 +21,15 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.1.0",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-route-grouping": "^1.1.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.12.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript-node": "^0.1.3"
   }
