--- a/.env example
+++ b/.env example
@@ -4,6 +4,6 @@ DB_USER='postgres'
 DB_PASSWORD='root'
 DB_PORT=5432
 DB_DATABASE='arunika'
-DB_CLIENT_CODE='pg'
-DB_CLIENT='postgresql'
+DB_CLIENT_CODE='mysql'
+DB_CLIENT='mysql'
 SECRET_KEY='I#KG0123jHFPFKJ'
