--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "module": "index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": " bun --watch index.ts",
-    "dev:swagger": "bun swagger.ts && bun --watch index.ts",
+    "dev": "bun swagger.ts && bun --watch index.ts",
     "db": "bunx knex"
   },
   "devDependencies": {
@@ -27,6 +26,7 @@
     "express-route-grouping": "^1.1.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "pg": "^8.12.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
